Fixed since date

--- a/public/cv.html
+++ b/public/cv.html
@@ -62,7 +62,7 @@
         <section id="hello" class="push_1 grid_5">
             <p>Hello! I'm developer from Minsk, Belarus. And I believe in the power of web.</p>
             <p>My goal is work on challenging and exciting projects and to gain as much experience as I can.</p>
-            <p>I'm interested in sexy, powerful and perspective technologies such as Node.js and Ruby on Rails. Currently I'm working on this site and building Dr.Mario clone for iPhone. Also I work in <a href="http://itransition.com">Itransition</a> as full-time developer.</p>
+            <p>I'm interested in sexy, powerful and perspective technologies such as Node.js and Ruby on Rails. Currently I'm working on this site and building Dr.Mario clone for iPhone. Also I work in <a href="http://itransition.com">Itransition</a> as full-time developer since mid 2011.</p>
             <section id="education">
                 <h3>My education</h3>
                 <h4>Belarussian State University of Informatics and Radioelectronics</h4>
