--- a/public/cv.html
+++ b/public/cv.html
@@ -66,7 +66,7 @@
             <section id="education">
                 <h3>My education</h3>
                 <h4>Belarussian State University of Informatics and Radioelectronics</h4>
-                <p>2008-2013. Math, databases, C, .NET, algorithms and staff. I am computer science engineer.</p>
+                <p>2008-2013. Math, databases, C, .NET, algorithms and stuff. I am computer science engineer.</p>
                 <h4>First Certificate in English (FCE)</h4>
                 <p>Grade B. Upper-intermediate english</p>
             </section>
